experiments/prompt-runs/v1/summary.md
# v1

**Model:** `gemma4:e4b-it-qat`
**Avg hit rate:** 73.3%

## NR Doc13-Insurancepolicy.pdf
- hit_rate: **77%** (10/13)
- misses:
  - `Address` / `Withelminakade 953 A, 3072 AP Rotterdam,  The Netherlands`
  - `Address` / `NO.8 SHUILANG STREET,SUZHOU INDUSTRIAL PARK,SUZHOU INDUSTRIA`
  - `Shipping Information` / `SANTOS PORT.BRAZIL,`

## NR Doc2-invoice.pdf
- hit_rate: **88%** (7/8)
- misses:
  - `Company` / `THE LIBYAN RUSSIAN UKRANIAN SPECIALIZED CENTER`

## NR Doc6-BL.pdf
- hit_rate: **92%** (12/13)
- misses:
  - `Company` / `A.P. Moller-Maersk A/S`

## NR Doc6-BL.pdf
- hit_rate: **46%** (6/13)
- misses:
  - `Company` / `COOPERATIVE COFFEES, INC`
  - `Company Address` / `302W. LAMAR ST. SUITE E 31709 AMERICUS, GEORGIA, USA`
  - `Company` / `EXCELCO TRADING L.P.`
  - `Company Address` / `17 BATTERY PLACE, SUITE 1010 NEW YORK, NY 10004`
  - `Company` / `A.P. Moller-Maersk A/S`
  - `Shipping Route` / `Newark`
  - `Goods` / `WASHED GREEN COFFEE PERUVIAN ALTURA EURO PREPARATION (E.P.) `

## NR Doc9-AWB.pdf
- hit_rate: **64%** (7/11)
- misses:
  - `Company Name` / `MEDICAL EQUPMENT EXPORTING COMPANY LTD.STI.`
  - `Company Name` / `MEDICAL EQUPMENT IMPORT INCORPORATION`
  - `Address` / `UZUNDERE CADDESI KARSIYAKA YOLU UZERI BAYRAKLI IZMIR TURKEY`
  - `Address` / `TAY HO BRANCH, 447 LAC LONG QUAN STREET, TAY HO DISTRICT, HA`
