experiments/prompt-runs/v2/summary.md
# v2

**Model:** `gemma4:e4b-it-qat`
**Avg hit rate:** 33.6%

## NR Doc13-Insurancepolicy.pdf
- hit_rate: **15%** (2/13)
- misses:
  - `Company Name` / `Thomas Miller BV.`
  - `Company Name` / `CARGILL AGRICOLA SA,`
  - `Company Name` / `VISCOFAN TECHNOLOGY (SUZHOU)CO.LTD,`
  - `Company Name` / `THOMAS MILLER`
  - `Address` / `Withelminakade 953 A, 3072 AP Rotterdam,  The Netherlands`
  - `Address` / `AV DOUTOR CHUCRI ZAIDAN 1240 ANDAR 6 AO 9 VILA SAO FRANCISCO`
  - `Address` / `NO.8 SHUILANG STREET,SUZHOU INDUSTRIAL PARK,SUZHOU INDUSTRIA`
  - `Shipping Information` / `SANTOS PORT.BRAZIL,`
  - `Shipping Information` / `CHINA`
  - `Shipping Information` / `MAERSK LA PAZ`
  - `Goods Description` / `WHITE REFINED SUGAR ICUMSA 45`

## NR Doc2-invoice.pdf
- hit_rate: **50%** (4/8)
- misses:
  - `Company` / `THE LIBYAN RUSSIAN UKRANIAN SPECIALIZED CENTER`
  - `Company Address` / `11-UEONIO STREET, TRIPOLI, LIBYA`
  - `Company` / `HSBC`
  - `Goods` / `DOORES AND WINDOWS ACCESORY`

## NR Doc6-BL.pdf
- hit_rate: **46%** (6/13)
- misses:
  - `Company` / `COOPERATIVE COFFEES, INC`
  - `Company Address` / `302W. LAMAR ST. SUITE E 31709 AMERICUS, GEORGIA, USA`
  - `Company` / `EXCELCO TRADING L.P.`
  - `Company Address` / `17 BATTERY PLACE, SUITE 1010 NEW YORK, NY 10004`
  - `Company` / `MAERSK LINE`
  - `Company` / `Maersk Peru S.A.`
  - `Company` / `A.P. Moller-Maersk A/S`

## NR Doc6-BL.pdf
- hit_rate: **38%** (5/13)
- misses:
  - `Company` / `COOPERATIVE COFFEES, INC`
  - `Company Address` / `302W. LAMAR ST. SUITE E 31709 AMERICUS, GEORGIA, USA`
  - `Company` / `EXCELCO TRADING L.P.`
  - `Company Address` / `17 BATTERY PLACE, SUITE 1010 NEW YORK, NY 10004`
  - `Company` / `MAERSK LINE`
  - `Company` / `Maersk Peru S.A.`
  - `Company` / `A.P. Moller-Maersk A/S`
  - `Shipping Route` / `Newark`

## NR Doc9-AWB.pdf
- hit_rate: **18%** (2/11)
- misses:
  - `Company Name` / `MEDICAL EQUPMENT EXPORTING COMPANY LTD.STI.`
  - `Company Name` / `TURKISH AIRLINES INC.`
  - `Company Name` / `VIETNAM BANK FOR AGRICULTURE AND RURAL DEVELOPMENT`
  - `Company Name` / `FAST STAR LINES TRANSPORT LTD.`
  - `Company Name` / `MEDICAL EQUPMENT IMPORT INCORPORATION`
  - `Address` / `UZUNDERE CADDESI KARSIYAKA YOLU UZERI BAYRAKLI IZMIR TURKEY`
  - `Address` / `TAY HO BRANCH, 447 LAC LONG QUAN STREET, TAY HO DISTRICT, HA`
  - `Address` / `TAH HO DISTRICT, HA NOI, VIET NAM`
  - `Shipping Information` / `HANOI AIRPORT IN VIET NAM`
